--- a/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.less
+++ b/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.less
@@ -35,7 +35,7 @@
   background-color: #f2f2f2;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  // margin: 8px;
+  margin: 8px;
 }
 
 // .table-row-match-roster-edit > * {
