start roster refactor

--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
@@ -5,6 +5,7 @@
         @if (showHomeOffenseStart) {
           @if (homeFootballStartOffense$ | async; as players) {
             <app-football-offense-start-display
+              [team]="homeTeam$ | async"
               [players]="players"
             ></app-football-offense-start-display>
           } @else {
