--- a/src/app/shared/scoreboards/football-offense-start-display/football-offense-start-display.component.less
+++ b/src/app/shared/scoreboards/football-offense-start-display/football-offense-start-display.component.less
@@ -8,7 +8,8 @@
   color: #393939;
   // color: black;
   padding: 20px;
-  // margin: 20px;
+  margin: 10px;
+  margin-top: 20px;
   border-radius: 20px;
   background-color: rgba(158, 190, 158, 0.8);
 }
