--- a/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
+++ b/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
@@ -50,16 +50,12 @@
     [tuiTextfieldLabelOutside]="true"
     style="padding: 10px"
   >
-    <!-- @for (p of players; track $index) {
-      {{ p }}
-    } -->
-    @if (
-      players &&
-      players.length &&
-      playerForm &&
-      playersArray &&
-      playersArray.length
-    ) {
+
+    @if (players &&
+    players.length &&
+    playerForm &&
+    playersArray &&
+    playersArray.length) {
       <div class="table-match-roster">
         @if (players.length) {
           <div [formArrayName]="arrayName + side" class="table-body">
@@ -99,15 +95,12 @@
               <div class="table-cell-match-roster name">
                 @if (isRowEnabled(i)) {
                   <!-- enabled -->
-                  @if (
-                    getFormDataByIndexAndKey(
-                      playerFormGroup,
-                      i,
-                      "playerInMatchId"
-                    );
-                    as playerInMatchId
-                  ) {
-                    <!-- player in match id {{ playerInMatchId }} -->
+                  @if (getFormDataByIndexAndKey(
+                    playerFormGroup,
+                    i,
+                    "playerInMatchId"
+                  ); ) {
+
                     <app-select-player-to-match
                       [playerList]="availablePlayersInTeamTournament"
                       [matchId]="match.id!"
@@ -122,10 +115,7 @@
                       (playerSelect)="onPlayerSelect($event, i)"
                     ></app-select-player-to-match>
                   } @else {
-                    <!-- @if (
-                      availablePlayersInTeamTournament &&
-                      availablePlayersInTeamTournament.length > 0
-                    ) { -->
+
                     <app-select-player-to-match
                       [playerList]="availablePlayersInTeamTournament"
                       [matchId]="match.id!"
@@ -139,106 +129,15 @@
                       "
                       (playerSelect)="onPlayerSelect($event, i)"
                     ></app-select-player-to-match>
-                    <!-- }  -->
-                    <!-- @else {
-                      NO PLAYERS IN SEASON TEAM ROSTER
-                    } -->
+
                   }
                 } @else {
                   <!-- disabled -->
-                  @if (
-                    getFormDataByIndexAndKey(playerFormGroup, i, "fullName");
-                    as name
-                  ) {
+                  @if (getFormDataByIndexAndKey(playerFormGroup, i, "fullName");
+                    as name) {
                     {{ name | titlecase }}
                   }
                 }
-                <!-- <app-select-player-to-match
-                      [playerList]="availablePlayersInTeamTournament"
-                      [matchId]="match.id!"
-                      [control]="
-                        getFormControl(
-                          this.playerForm,
-                          i,
-                          'playerInTeamTournament',
-                          arrayName + side
-                        )
-                      "
-                      (playerSelect)="onPlayerSelect($event, i)"
-                    ></app-select-player-to-match>
-                  } @else {
-                    @if (
-                      getFormDataByIndexAndKey(playerFormGroup, i, "fullName");
-                      as name
-                    ) {
-                      {{ name | titlecase }}
-                    }
-                  } -->
-                <!-- } @else {
-                  @if (
-                    availablePlayersInTeamTournament &&
-                    availablePlayersInTeamTournament.length > 0
-                  ) {
-                    <app-select-player-to-match
-                      [playerList]="availablePlayersInTeamTournament"
-                      [matchId]="match.id!"
-                      [control]="
-                        getFormControl(
-                          this.playerForm,
-                          i,
-                          'playerInTeamTournament',
-                          arrayName + side
-                        )
-                      "
-                      (playerSelect)="onPlayerSelect($event, i)"
-                    ></app-select-player-to-match>
-                  } @else {
-                    NO PLAYERS IN SEASON TEAM ROSTER
-                  }
-                } -->
-
-                <!-- @if (
-                      getFormDataByIndexAndKey(playerFormGroup, i, "fullName");
-                      as name
-                    ) {
-                      {{ name | titlecase }}
-                    } @else {
-                      <app-select-player-to-match
-                        [playerList]="availablePlayersInTeamTournament"
-                        [matchId]="match.id!"
-                        [control]="
-                          getFormControl(
-                            this.playerForm,
-                            i,
-                            'playerInTeamTournament',
-                            arrayName + side
-                          )
-                        "
-                        (playerSelect)="onPlayerSelect($event, i)"
-                      ></app-select-player-to-match>
-                    }
-                  } @else {
-                    @if (
-                      availablePlayersInTeamTournament &&
-                      availablePlayersInTeamTournament.length > 0
-                    ) {
-                      <app-select-player-to-match
-                        [playerList]="availablePlayersInTeamTournament"
-                        [matchId]="match.id!"
-                        [control]="
-                          getFormControl(
-                            this.playerForm,
-                            i,
-                            'playerInTeamTournament',
-                            arrayName + side
-                          )
-                        "
-                        (playerSelect)="onPlayerSelect($event, i)"
-                      ></app-select-player-to-match>
-                    } @else {
-                      NO PLAYERS IN SEASON TEAM ROSTER
-                    }
-                  } -->
               </div>
               <div class="table-cell-match-roster left">
                 @if (sportId) {
@@ -297,15 +196,14 @@
                         i,
                         'isStart',
                         arrayName + side
-                      ) || false
+                      )
                     "
                     size="l"
-                    >is Start?</tui-checkbox-labeled
+                  >is Start?
+                  </tui-checkbox-labeled
                   >
                 } @else {
-                  @if (
-                    getFormDataByIndexAndKey(playerFormGroup, i, "isStart")
-                  ) {
+                  @if (getFormDataByIndexAndKey(playerFormGroup, i, "isStart")) {
                     <span>In Start Roster</span>
                   } @else {
                     <span></span>
@@ -317,10 +215,8 @@
                   <ng-template tuiExpandContent>
                     <div class="table-cell-match-roster actions">
                       <div class="player-short-profile">
-                        @if (
-                          playerFormGroup.get("photoUrl" + i)!.value;
-                          as photoUrl
-                        ) {
+                        @if (playerFormGroup.get("photoUrl" + i)!.value;
+                          as photoUrl) {
                           <tui-avatar
                             size="xl"
                             text="uploaded logo"
@@ -338,15 +234,12 @@
                           <span>{{ dob | date }}</span>
                         }
                         @if (deleteOrUpdate == "delete") {
-                          @if (
-                            getFormDataByIndexAndKey(
-                              playerFormGroup,
-                              i,
-                              "playerInMatch"
-                            );
-                            as playerInMatch
-                          ) {
-                            <!-- {{ playerInMatch.player_team_tournament.id }} -->
+                          @if (getFormDataByIndexAndKey(
+                            playerFormGroup,
+                            i,
+                            "playerInMatch"
+                          );
+                            as playerInMatch) {
                             <app-actions-buttons
                               [id]="id"
                               [subId]="
@@ -415,10 +308,8 @@
               }
             </div>
           </div>
-          @if (
-            !players.length ||
-            players[players.length - 1].match_player.id !== null
-          ) {
+          @if (!players.length ||
+          players[players.length - 1].match_player.id !== null) {
             <div class="table-row-match-roster final">
               <app-add-button-on-final-tr
                 [action]="'add player'"
